# CUDALibrarySamples

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE.TXT  README.md
MathDx/cuBLASDx/: CMakeLists.txt  README.md  arch_runner.hpp  batched_gemm_fp64.cu  block_io.hpp  blockdim_gemm_fp16.cu  check_error.hpp  common.hpp  common_nvrtc.hpp  device_gemm_performance.cu  flops.h  fused_gemm_performance.cu  gemm_fft.cu  gemm_fft_fp16.cu  gemm_fft_performance.cu  gemm_fusion.cu  introduction_example.cu  multiblock_gemm.cu  nvrtc_gemm.cpp  reduce.hpp  reference.hpp  scaled_dot_prod_attn.cu  scaled_dot_prod_attn_batched.cu  simple_gemm_aat.cu  simple_gemm_cfp16.cu  simple_gemm_custom_layout.cu  simple_gemm_fp32.cu  simple_gemm_fp32_decoupled.cu  simple_gemm_fp8.cu  simple_gemm_int8_int8_int32.cu  simple_gemm_leading_dimensions.cu  simple_gemm_mixed_precision.cu  simple_gemm_std_complex_fp32.cu  simple_gemm_transform.cu  single_gemm_performance.cu  single_gemm_performance.hpp
MathDx/cuFFTDx/: CMakeLists.txt  Makefile  README.md  README_LTO.md  README_LTO_EA.md  block_fft_performance.hpp  block_fft_performance_many.cu  block_io.hpp  block_io_strided.hpp  common.hpp  common_nvrtc.hpp  convolution.cu  convolution_padded.cu  convolution_performance.cu  convolution_r2c_c2r.cu  fft_2d.cu  fft_2d_r2c_c2r.cu  fft_2d_single_kernel.cu  fft_3d.cu  fft_3d_box_single_block.cu  fft_3d_cube_single_block.cu  introduction_example.cu  mixed_io.hpp  mixed_precision_fft_1d.cu  mixed_precision_fft_2d.cu  nvrtc_fft_block.cu  nvrtc_fft_thread.cu  padded_io.hpp  random.hpp  simple_fft_block.cu  simple_fft_block_c2r.cu  simple_fft_block_c2r_fp16.cu  simple_fft_block_cub_io.cu  simple_fft_block_fp16.cu  simple_fft_block_half2.cu  simple_fft_block_r2c.cu  simple_fft_block_r2c_fp16.cu  simple_fft_block_shared.cu  simple_fft_block_std_complex.cu  simple_fft_thread.cu  (+1 more)
MathDx/cuRANDDx/: CMakeLists.txt  README.md  common.hpp  mrg_two_distributions_thread_api.cu  nvrtc_pcg_thread_api.cpp  philox_thread_api.cu  simple_pcg_thread_api.cu  sobol_thread_api.cu  xorwow_init_and_generate_thread_api.cu
MathDx/cuSolverDx/: CMakeLists.txt  README.md  blocked_potrf.cu  common.hpp  gesv_batched_wo_pivot.cu  gesv_partial_pivot.cu  getrf_partial_pivot.cu  getrf_wo_pivot.cu  nvrtc_helper.hpp  nvrtc_potrs.cpp  posv_batched.cu  potrf_runtime_ld.cu  simple_potrf.cu
MathDx/nvCOMPDx/: CMakeLists.txt  README.md
NPP+/: README.md
NPP+/findContour/: CMakeLists.txt  README.md  findContourNPPPlus.cpp
NPP/nppCanny/: BLOG.md  CMakeLists.txt  README.md  npp_canny_simple.cpp  npp_canny_simple.py
cuBLASLt/: .clang-format  CMakeLists.txt  README.md
cuBLASLt/Common/: LtMatmulCustomFind.h  helpers.cpp  helpers.h
cuBLASLt/LtBlk128x128Fp8Matmul/: CMakeLists.txt  main.cpp  sample_cublasLt_LtBlk128x128Fp8Matmul.cu  sample_cublasLt_LtBlk128x128Fp8Matmul.h
cuBLASLt/LtBlk128x128Fp8gemmGroupedSimple/: CMakeLists.txt  main.cpp  sample_cublasLt_LtBlk128x128Fp8gemmGroupedSimple.cu  sample_cublasLt_LtBlk128x128Fp8gemmGroupedSimple.h
cuBLASLt/LtDgemmEmulated/: CMakeLists.txt  main.cpp  sample_cublasLt_LtDgemmEmulated.cu  sample_cublasLt_LtDgemmEmulated.h
cuBLASLt/LtDgemmPresetAlgo/: CMakeLists.txt  main.cpp  sample_cublasLt_LtDgemmPresetAlgo.cu  sample_cublasLt_LtDgemmPresetAlgo.h
cuBLASLt/LtFp8CustomFind/: CMakeLists.txt  main.cpp  main.cu
cuBLASLt/LtFp8Matmul/: CMakeLists.txt  main.cpp  sample_cublasLt_LtFp8Matmul.cu  sample_cublasLt_LtFp8Matmul.h
cuBLASLt/LtFp8gemmGroupedSimple/: CMakeLists.txt  main.cpp  sample_cublasLt_LtFp8gemmGroupedSimple.cu  sample_cublasLt_LtFp8gemmGroupedSimple.h
cuBLASLt/LtHSHgemmGroupedSimple/: CMakeLists.txt  main.cpp  sample_cublasLt_LtHSHgemmGroupedSimple.cu  sample_cublasLt_LtHSHgemmGroupedSimple.h
cuBLASLt/LtHSHgemmPointerArrayBatchSimple/: CMakeLists.txt  main.cpp  sample_cublasLt_LtHSHgemmPointerArrayBatchSimple.cu  sample_cublasLt_LtHSHgemmPointerArrayBatchSimple.h
cuBLASLt/LtHSHgemmStridedBatchSimple/: CMakeLists.txt  main.cpp  sample_cublasLt_LtHSHgemmStridedBatchSimple.cu  sample_cublasLt_LtHSHgemmStridedBatchSimple.h
cuBLASLt/LtIgemmTensor/: CMakeLists.txt  main.cpp  sample_cublasLt_LtIgemmTensor.cu  sample_cublasLt_LtIgemmTensor.h
cuBLASLt/LtMxfp8Matmul/: CMakeLists.txt  main.cpp  sample_cublasLt_LtMxfp8Matmul.cu  sample_cublasLt_LtMxfp8Matmul.h
cuBLASLt/LtMxfp8gemmGroupedSimple/: CMakeLists.txt  main.cpp  sample_cublasLt_LtMxfp8gemmGroupedSimple.cu  sample_cublasLt_LtMxfp8gemmGroupedSimple.h
cuBLASMp/: CMakeLists.txt  README.md  geadd.cu  gemm.cu  gemr2d.cu  helpers.h  matmul.h  matmul_ag.cu  matmul_ar.cu  matmul_rs.cu  matrix_generator.hxx  pgeadd.cu  pgemm.cu  pmatmul.cu  pmatmul_ag.cu  pmatmul_ar.cu  pmatmul_rs.cu  psyrk.cu  ptradd.cu  ptrsm.cu  symm.cu  syr2k.cu  syrk.cu  syrkx.cu  tp_matmul.cu  tradd.cu  trmm.cu  trsm.cu
cuEST/: README.md  THIRD_PARTY_NOTICES.txt  pyproject.toml
cuSOLVERMp/: .gitignore  CMakeLists.txt  Makefile  README.md  helpers.h  mp_gels.c  mp_gels.cpp  mp_geqrf.c  mp_geqrf.cpp  mp_geqrf_orgqr.c  mp_gesvd.c  mp_getrf_getrs.c  mp_getrf_getrs.cpp  mp_laset.c  mp_newton_schulz.cpp  mp_ormqr.c  mp_polar.c  mp_potrf_potrs.c  mp_potrf_potrs.cpp  mp_potrf_potrs_fp32.c  mp_potrf_potrs_fp32emulation.c  mp_syevd.c  mp_syevd.cpp  mp_sygst.c  mp_sygvd.c  mp_sytrd_stedc_ormtr.c
cuSOLVERSp2cuDSS/: CMakeLists.txt  README.md  csreigs2cuDSS_dcomplex.cpp  csreigvsi2cuDSS_double.cpp  cuSolverRf2cuDSS.hpp  cuSolverRf2cuDSS_double.cpp  cuSolverSp2cuDSS.hpp  cuSolverSp2cuDSS_dcomplex.cpp  cuSolverSp2cuDSS_double.cpp  cuSolverSp2cuDSS_float.cpp  cuSolverSp2cuDSS_scomplex.cpp  test_complex.mtx  test_real.mtx  utils.hpp
cuTENSOR/: CMakeLists.txt  Makefile  README.md  blocksparse.cu  contraction.cu  contraction_autotuning.cu  contraction_jit.cu  contraction_plan_cache.cu  contraction_simple.cu  contraction_trinary.cu  einsum.cu  elementwise_binary.cu  elementwise_permute.cu  elementwise_permute_padding.cu  elementwise_trinary.cu  reduction.cu  utils.cuh
cuTENSORMg/: CMakeLists.txt  blog_post.cu  contraction_multi_gpu.cu
cutensorMp/: CMakeLists.txt  cutensorMp_contraction.cu
(+1709 files in other folders)
